k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: techdemand
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: techdemand
spec:
  selector:
    app: auth-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: company-service
  namespace: techdemand
spec:
  selector:
    app: company-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: contact-service
  namespace: techdemand
spec:
  selector:
    app: contact-service
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: techdemand-web
  namespace: techdemand
spec:
  selector:
    app: techdemand-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
